NEW: updating config to include other pen types

--- a/histoqc/config/config.ini
+++ b/histoqc/config/config.ini
@@ -39,7 +39,10 @@ image_work_size = 1.25x
 [ClassificationModule.byExampleWithFeatures:pen_markings]
 name: pen_markings
 threshold: .5
-examples: ./pen/1k_version/pen_green.png:./pen/1k_version/pen_green_mask.png
+examples: ./pen/1k\_version/pen\_green.png:./pen/1k\_version/pen\_green\_mask.png
+          ./pen/1k\_version/pen\_red.png:./pen/1k\_version/pen\_red\_mask.png
+          ./pen/1k\_version/pen\_black.png:./pen/1k\_version/pen\_black\_mask.png
+          ./pen/1k\_version/pen\_blue.png:./pen/1k\_version/pen\_blue\_mask.png
 
 area_threshold: 100
 features:  frangi
