BUG: fixing paths to pen masks

--- a/histoqc/config/config.ini
+++ b/histoqc/config/config.ini
@@ -39,10 +39,10 @@ image_work_size = 1.25x
 [ClassificationModule.byExampleWithFeatures:pen_markings]
 name: pen_markings
 threshold: .5
-examples: ./pen/1k\_version/pen\_green.png:./pen/1k\_version/pen\_green\_mask.png
-          ./pen/1k\_version/pen\_red.png:./pen/1k\_version/pen\_red\_mask.png
-          ./pen/1k\_version/pen\_black.png:./pen/1k\_version/pen\_black\_mask.png
-          ./pen/1k\_version/pen\_blue.png:./pen/1k\_version/pen\_blue\_mask.png
+examples: ./pen/1k_version/pen_green.png:./pen/1k_version/pen_green_mask.png
+          ./pen/1k_version/pen_red.png:./pen/1k_version/pen_red_mask.png
+          ./pen/1k_version/pen_black.png:./pen/1k_version/pen_black_mask.png
+          ./pen/1k_version/pen_blue.png:./pen/1k_version/pen_blue_mask.png
 
 area_threshold: 100
 features:  frangi
