WIP: changing global config path for UI

--- a/histoqc/config/config_v2.1.ini
+++ b/histoqc/config/config_v2.1.ini
@@ -1,8 +1,8 @@
 [pipeline]
 steps= BasicModule.getBasicStats
     LightDarkModule.saveEqualisedImage
-#    ClassificationModule.byExampleWithFeatures:pen_markings
-#    ClassificationModule.byExampleWithFeatures:coverslip_edge
+    ClassificationModule.byExampleWithFeatures:pen_markings
+    ClassificationModule.byExampleWithFeatures:coverslip_edge
     LightDarkModule.minimumPixelIntensityNeighborhoodFiltering
     LightDarkModule.getIntensityThresholdPercent:darktissue
     BubbleRegionByRegion.detectSmoothness
@@ -49,6 +49,7 @@ threshold: .5
 examples: ./pen/1k_version/pen_green.png:./pen/1k_version/pen_green_mask.png
           ./pen/1k_version/pen_red.png:./pen/1k_version/pen_red_mask.png
           ./pen/1k_version/pen_black.png:./pen/1k_version/pen_black_mask.png
+          ./pen/1k_version/pen_blue.png:./pen/1k_version/pen_blue_mask.png
 
 nsamples_per_example: 10000
 area_threshold: 100
